#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([extpoll], [0.1.0])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PATH_PROG(PERL, perl, no)

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile man/Makefile])

AC_OUTPUT
